# plasma-widget-onelinecalc

./: .gitignore  CMakeLists.txt  configdialog.cpp  configdialog.h  onelinecalc.cpp  onelinecalc.h  plasma-onelinecalc.desktop  preferences.ui
debian/: changelog  control  copyright  rules
